# CompuScopeDriver

CompuScope_Linux_v5.04.36/gati-linux-driver/: Makefile  Makefile.am  Makefile.in  build_modules.sh  common_driver.mk  common_middle.mk  config.h  config.status  configure  configure.ac  gagesc.sh  libtool  load_driver.sh  unload_driver.sh
CompuScope_Linux_v5.04.36/gati-linux-driver/Boards/Bd_Include/: CsCardState.h  CsDecadeRegs.h  CsDecadeState.h  CsDriverTypes.h  CsDrvApi.h  CsDrvDefines.h  CsFastBallState.h  CsHexagonRegs.h  CsHexagonState.h  CsIoctl.h  CsIoctlTypes.h  CsLinuxSignals.h  CsPlxDefines.h  CsRabbitState.h  CsSpiderState.h  CsSplendaState.h  CsSymLinks.h  DeereCardState.h
CompuScope_Linux_v5.04.36/gati-linux-driver/Boards/CsDevRemote/Common/: CsDevRemote.cpp  GageSocket.cpp  GageSocket.h  GageSystemManager.cpp  GageSystemManager.h  RemoteSystemInfo.cpp  RemoteSystemInfo.h  VxiDiscovery.c  VxiDiscovery.h  vxi11.h  vxi11_clnt.c  vxi11_xdr.c
CompuScope_Linux_v5.04.36/gati-linux-driver/Boards/CsSpDev/AdqApiLite/: ADQAPI_Lite.cpp  AdqApiLite_definitions.h  AdqLite.cpp  AdqLite.h  AdqLiteControlUnit.cpp  AdqLiteControlUnit.h  CsAdqUpdateApi.def
CompuScope_Linux_v5.04.36/gati-linux-driver/Boards/CsSpDev/Common/: CsAdqUpdate.cpp  CsAdqUpdate.h  CsSpDevApi.cpp  CsSpDevFuncTypes.h  CsSpDevXfer.cpp  CsSpDevice.cpp  CsSpDevice.h  CsSpdevCfg.cpp  CsSpdevOps.cpp  CsUsb.cpp  CsUsbIf.cpp
CompuScope_Linux_v5.04.36/gati-linux-driver/Boards/KernelSpace/CsDecade12/: CsDecadeDrv.c  CsDecadeFlashObj.c
CompuScope_Linux_v5.04.36/gati-linux-driver/Boards/KernelSpace/CsHexagon/: CsHexagonDrv.c  CsHexagonFlashObj.c
CompuScope_Linux_v5.04.36/gati-linux-driver/Boards/KernelSpace/CsJohnDeere/: CsDeereDrv.c  CsDeereDrv.h  CsDeereFlashObj.c  CsDeereFlashObj.h
CompuScope_Linux_v5.04.36/gati-linux-driver/Boards/KernelSpace/CsRabbit/: CsRabbitDrv.c  CsRabbitDrv.h  CsRabbitFlashObj.c  CsRabbitFlashObj.h
CompuScope_Linux_v5.04.36/gati-linux-driver/Boards/KernelSpace/CsSpider/: CsSpiderDrv.c  CsSpiderDrv.h  (+2 more)
CompuScope_Linux_v5.04.36/gati-linux-driver/Common/: CriticalSection.cpp  CsEventLog.cpp  EventLog.cpp  LegacyAddresses.cpp  RawSocket.cpp  RawSocketServerWorker.cpp  Structs.c  ThreadDispatcher.cpp  misc.cpp  xml.cpp
CompuScope_Linux_v5.04.36/gati-linux-driver/Common/Linux/: CWinEventHandle.cpp  WinEvent.cpp
CompuScope_Linux_v5.04.36/gati-linux-driver/CsTestQt/: AsyncCsOps.cpp  AsyncCsOps.h  CsTest QT.doc  CsTestErrMng.cpp  CsTestErrMng.h  CsTestFunc.cpp  CsTestFunc.h  CsTestQt.sln  DrawableChannel.cpp  DrawableChannel.h  GageDispSystem.cpp  GageDispSystem.h  GageSsmSystem.cpp  GageSsmSystem.h  GageSystem.cpp  GageSystem.h  Makefile  Makefile.Debug  Makefile.Release  SystemCaps.cpp  SystemCaps.h  WaitPopUp.cpp  WaitPopUp.h  acquisitionworker.cpp  acquisitionworker.h  csSaveFile.cpp  csSaveFile.h  cstestqt.cpp  cstestqt.h  cstestqt.pro  cstestqt.qrc  cstestqt.ui  cstestqttypes.h  install_cstestqt.sh  main.cpp  qCursorInfodialog.cpp  qCursorInfodialog.h  qCursorInfodialog.ui  qGoToSample.cpp  qGoToSample.h  (+43 more)
CompuScope_Linux_v5.04.36/gati-linux-driver/Include/Linux/: CWinEventHandle.h  CsLinuxPort.h  DllStruct.h  StdAfx.h  statemap.h
CompuScope_Linux_v5.04.36/gati-linux-driver/Include/Private/: CompMan_defs.h  CriticalSection.h  Cs16xyyCapsInfo.h  Cs8xxxCapsInfo.h  CsAdvStructs.h  CsBrainiacCal.h  CsBrainiacFlash.h  CsBrainiacOptions.h  CsBunnyCal.h  CsBunnyCapsInfo.h  CsBunnyFlash.h  CsBunnyOptions.h  CsDecadeCal.h  CsDecadeCapsInfo.h  CsDecadeFlash.h  CsDecadeOptions.h  CsDeereCal.h  CsDeereCapsInfo.h  CsDeereFlash.h  CsDeereOptions.h  CsDevRemote_Defines.h  CsDeviceIDs.h  CsDisp.h  CsDrvConst.h  CsDrvShare.h  CsDrvStructs.h  CsEventLog.h  CsFastBlFlash.h  CsFirmwareCheck.h  CsFirmwareDefs.h  CsFs.h  CsHexagonCal.h  CsHexagonCapsInfo.h  CsHexagonFlash.h  CsHexagonOptions.h  CsMarvinCal.h  CsMarvinOptions.h  CsMarvinXXLFlash.h  CsNucleonBaseFlash.h  CsPeevStruct.h  (+32 more)
CompuScope_Linux_v5.04.36/gati-linux-driver/Include/Public/: CsCvi.h  CsDefines.h  CsErrors.h  CsExpert.h  CsPrototypes.h  CsStruct.h  CsTypes.h  DiskHead.h  GagePlus.h  Structs.h  gage_drv.h
CompuScope_Linux_v5.04.36/gati-linux-driver/Middle/CsDisp/: CsDisp.cpp  Makefile  Makefile.am  Makefile.in
CompuScope_Linux_v5.04.36/gati-linux-driver/Middle/CsFs/: Makefile  Makefile.am  Makefile.in
CompuScope_Linux_v5.04.36/gati-linux-driver/Middle/CsRm/: Makefile  Makefile.am  Makefile.in
CompuScope_Linux_v5.04.36/gati-linux-driver/Middle/CsRmDLL/: Makefile  Makefile.am  Makefile.in
CompuScope_Linux_v5.04.36/gati-linux-driver/Middle/CsSsm/: Makefile  Makefile.am  Makefile.in
CompuScope_Linux_v5.04.36/gati-linux-driver/Package/: README.txt  README.user.txt  build_modules.sh  clean_modules.sh  dkms.conf  driver.sh  gage-driver.conf  gage.conf  gage.sh  gagehp.sh  register_dkms.sh
CompuScope_Linux_v5.04.36/gati-linux-driver/Package/rpm/: gage-driver.spec
CompuScope_Linux_v5.04.36/gati-linux-driver/Sdk/: Makefile  SDK_README.TXT
CompuScope_Linux_v5.04.36/gati-linux-driver/Sdk/C_Common/: CsSdkMisc.c  CsSdkMisc.h  CsSdkUtil.c  CsSdkUtil.h  CsTchar.h
CompuScope_Linux_v5.04.36/gati-linux-driver/Sdk/CsAppSupport/: ConfigSystem.c  CsAppSupport.c  CsAppSupport.h  Makefile  Makefile.am  Makefile.in  SaveFile.c
CompuScope_Linux_v5.04.36/gati-linux-driver/Sdk/GageAcquire/: Acquire.c  Acquire.ini  Makefile
CompuScope_Linux_v5.04.36/gati-linux-driver/Sdk/GageCoerce/: Coerce.c  Coerce.h  Coerce.ini  Makefile
CompuScope_Linux_v5.04.36/gati-linux-driver/Sdk/GageComplexTrigger/: ComplexTrigger.c  ComplexTrigger.ini  Makefile
CompuScope_Linux_v5.04.36/gati-linux-driver/Sdk/GageDeepAcquisition/: DeepAcquisition.c  DeepAcquisition.ini  Makefile
CompuScope_Linux_v5.04.36/gati-linux-driver/Sdk/GageMultipleRecord/: Makefile  MultipleRecord.c  MultipleRecord.ini
CompuScope_Linux_v5.04.36/gati-linux-driver/Sdk/GageMultipleSystem/: Makefile  MultipleSystem.c  MultipleSystem.h  System1.ini  System2.ini
CompuScope_Linux_v5.04.36/gati-linux-driver/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
(+329 files in other folders)
