# @FIXME@
# here to pass automake 1.14 distcheck; the 'issue'
# can be fixed in the am files but it will take some time.
distcleancheck:
	@:
#
# inform am which subdirectories are to be built
SUBDIRS = \
	Middle/CsDisp \
	Middle/CsFs \
	Middle/CsRmDLL \
	Middle/CsRm \
	Middle/CsSsm \
	Sdk/CsAppSupport \
	Boards/UserSpace/CsRabbit \
	Boards/UserSpace/CsSpider \
	Boards/UserSpace/CsSplenda \
	Boards/UserSpace/CsJohnDeere \
	Boards/UserSpace/CsDecade12 \
	Boards/UserSpace/CsHexagon

bin_SCRIPTS = Package/gagehp.sh

#
# extra files to be distributed
EXTRA_DIST = \
	Include \
	Boards/KernelSpace \
	Package/rpm/gage-driver.spec \
	Package/dkms.conf \
	Package/build_modules.sh \
	Package/clean_modules.sh \
	Package/driver.sh \
	Package/gage.conf \
	Package/gage.sh \
	Package/gagehp.sh \
	Package/gage-driver.conf \
	Package/register_dkms.sh \
	Package/README.user.txt \
	README.txt \
	Boards/Csi/CsSplenda/cse16xyo.csi \
	Boards/Csi/CsSplenda/cse16xyy.csi \
	CsTestQt \
	Sdk/Makefile \
	Sdk/SDK_README.TXT \
	Sdk/C_Common/CsSdkMisc.c \
	Sdk/C_Common/CsSdkMisc.h \
	Sdk/C_Common/CsSdkUtil.c \
	Sdk/C_Common/CsSdkUtil.h \
	Sdk/C_Common/CsTchar.h \
	Sdk/GageAcquire/Acquire.c \
	Sdk/GageAcquire/Acquire.ini \
	Sdk/GageAcquire/Makefile \
	Sdk/GageCoerce/Coerce.c \
	Sdk/GageCoerce/Coerce.h \
	Sdk/GageCoerce/Coerce.ini \
	Sdk/GageCoerce/Makefile \
	Sdk/GageComplexTrigger/ComplexTrigger.c \
	Sdk/GageComplexTrigger/ComplexTrigger.ini \
	Sdk/GageComplexTrigger/Makefile \
	Sdk/GageDeepAcquisition/DeepAcquisition.c \
	Sdk/GageDeepAcquisition/DeepAcquisition.ini \
	Sdk/GageDeepAcquisition/Makefile \
	Sdk/GageMultipleRecord/Makefile \
	Sdk/GageMultipleRecord/MultipleRecord.c \
	Sdk/GageMultipleRecord/MultipleRecord.ini \
	Sdk/GageMultipleSystem/Makefile \
	Sdk/GageMultipleSystem/MultipleSystem.c \
	Sdk/GageMultipleSystem/MultipleSystem.h \
	Sdk/GageMultipleSystem/System1.ini \
	Sdk/GageMultipleSystem/System2.ini \
	Sdk/Advanced/GageEvents/Events.c \
	Sdk/Advanced/GageEvents/Events.h \
	Sdk/Advanced/GageEvents/Events.ini \
	Sdk/Advanced/GageEvents/Makefile \
	Sdk/Advanced/GageEvents/Threads.c \
	Sdk/Advanced/GageStream2Analysis/Makefile \
	Sdk/Advanced/GageStream2Analysis/Stream2Analysis.c \
	Sdk/Advanced/GageStream2Analysis/Stream2Analysis.h \
	Sdk/Advanced/GageStream2Analysis/Stream2Analysis.ini \
	Sdk/Advanced/GageStream2Disk/Makefile \
	Sdk/Advanced/GageStream2Disk/Stream2Disk.c \
	Sdk/Advanced/GageStream2Disk/Stream2Disk.h \
	Sdk/Advanced/GageStream2Disk/Stream2Disk.ini \
        Sdk/Advanced/GageCsPrf/Makefile \
        Sdk/Advanced/GageCsPrf/GageCsPrf.c \
        Sdk/Advanced/GageCsPrf/GageCsPrf.h \
        Sdk/Advanced/GageCsPrf/Prf.ini

